projects/nx/src/apps/nx-dns/live/production/adguardhome-netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: adguardhome-server
    app.kubernetes.io/name: adguardhome
    app.kubernetes.io/version: v0.107.52
  name: adguardhome
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: adguardhome-server
      app.kubernetes.io/name: adguardhome
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-kube-system
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
        - port: 53
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 853
          protocol: TCP
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
